--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.32",
+    "monaco-editor": "^0.23.0",
     "ngx-cookie-service": "^2.3.0",
     "ngx-sortablejs": "^11.1.0",
     "ngx-toastr": "^12.1.0",
