--- a/package.json
+++ b/package.json
@@ -11,59 +11,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.1",
+    "@angular/animations": "~12.2.17",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.1.1",
-    "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
-    "@angular/forms": "~11.1.1",
-    "@angular/localize": "^11.1.1",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/localize": "^12.2.17",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~11.1.1",
-    "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "~11.1.1",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "ag-grid-angular": "^25.0.1",
-    "ag-grid-community": "^25.0.1",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "ag-grid-angular": "^25.3.0",
+    "ag-grid-community": "^25.3.0",
     "deepmerge": "^4.2.2",
     "faker": "^4.1.0",
-    "fuse.js": "^3.4.6",
+    "fuse.js": "^3.6.1",
     "jsdiff": "^1.1.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.32",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "monaco-editor": "^0.23.0",
-    "ngx-cookie-service": "^2.3.0",
+    "ngx-cookie-service": "^2.4.0",
     "ngx-sortablejs": "^11.1.0",
     "ngx-toastr": "^12.1.0",
     "randexp": "^0.5.3",
     "rxjs": "~6.6.3",
     "shorthash": "0.0.2",
-    "socket.io-client": "^4.5.3",
-    "sortablejs": "^1.10.2",
-    "tslib": "^2.0.0",
+    "socket.io-client": "^4.5.4",
+    "sortablejs": "^1.15.0",
+    "tslib": "^2.4.1",
     "uuid": "^3.4.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.1",
-    "@angular/language-service": "~11.1.1",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.1",
+    "@types/node": "^12.20.55",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.0",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.3"
+    "typescript": "~4.3.5"
   }
 }
