--- a/angular.json
+++ b/angular.json
@@ -81,7 +81,8 @@
               "optimization": false,
               "sourceMap": true
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
